--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,6 @@
 :root {
     --black: #121212;
     --white: #FFFFFF;
-    --backgroundColor: #E5E5E5;
     --buttonBg: #E4C1AE;
     --bodyFont: "Roboto", sans-serif;
   }
@@ -16,15 +15,20 @@
 
 html {
     font-size: 62.5%;
+
   }
 
 body {
     font-family: var(--bodyFont);
-    background: var(--backgroundColor);
+    background: var(--white);
     display: flex;
     justify-content: center;
-    align-items: center;
     font-size:1.6rem;
+
+    h1{
+        font-weight: 700;
+        font-size: 4.2rem;
+    }
 }
 
 main {
@@ -39,13 +43,9 @@ main {
 
         .centerRightSide {
             max-width: 380px;
-            h1{
-                font-weight: 700;
-                font-size: 4.2rem;
-                padding-bottom:24px;
-            }
 
             p{
+                padding-top:24px;
                 padding-bottom:32px;
                 line-height: 24px;
             }
@@ -58,10 +58,49 @@ main {
                 border:none;
                 font-weight: 700;
 
-                &:focus{
+                &:hover{
                     outline: 1px solid black;
                 }
             }
         }
     }
 }
+
+.modalSection {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    padding-top: 300px; //need to change to proper center modal (temporary solution)
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+
+    .modalContent {
+        background-color: var(--white);
+        margin: auto;
+        max-width: 920px;
+        max-height: 210px;
+
+        p{
+            font-size: 1.6rem;
+
+            span{
+                font-weight: bold;
+            }
+        }
+
+        .closeModal {
+            color: var(--black);
+            text-align: right;
+            font-size: 2.4rem;
+
+            &:hover {
+                color: var(--black);
+                cursor: pointer;
+            }
+        }
+    }
+  }
