--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -79,10 +79,8 @@ main {
 
 .modalSection {
     display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
-    padding-top: 300px; //need to change to proper center modal (temporary solution)
+    position: absolute;
+    inset: 0;
     z-index: 1;
     width: 100%;
     height: 100%;
@@ -94,6 +92,11 @@ main {
         margin: auto;
         max-width: 920px;
         max-height: 210px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
 
         p {
             font-size: 1.6rem;
